This might actually work

--- a/_posts/2022-8-01-inital-post.html
+++ b/_posts/2022-8-01-inital-post.html
@@ -1,3 +1,4 @@
+<p>I'm hoping this will show up as a preview?</p>
 <div id='product-component-1659398585655'></div>
 <script type="text/javascript">
 /*<![CDATA[*/
