Oh man this will work

--- a/_posts/2022-8-01-initial-post.html
+++ b/_posts/2022-8-01-initial-post.html
@@ -1,4 +1,8 @@
-<p>I'm hoping this will show up as a preview?</p>
+---
+title: Safety Document
+subtitle: A basic safety document template.
+---
+
 <div id='product-component-1659398585655'></div>
 <script type="text/javascript">
 /*<![CDATA[*/
