Okay that didn't work it's fine.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: Safety Documents For Sale
+title: Safety Documents
 subtitle: Purchase professionally crafted safety documents.
 ---
